# conda-mirror

./: Cargo.toml  README.md  pixi.toml
.github/chainguard/: write.sts.yaml
.github/workflows/: build.yml  chore.yml  ci.yml  scorecard.yml  update-lockfile.yml
conda_mirror/: conda_mirror.py
py-conda-mirror/: .gitignore  Cargo.toml  README.md  pixi.toml  pyproject.toml
py-conda-mirror/conda_mirror/: __init__.py
py-conda-mirror/src/: lib.rs
src/: config.rs  lib.rs  main.rs
tests/resources/: exclude.yml  include-exclude.yml  include-timestamp.yml  include.yml
