[package]
name = "conda-mirror"
description = "Mirror conda channels"
version = "0.11.4"
edition = "2024"

[features]
default = ["native-tls"]
native-tls = [
  "rattler_networking/native-tls",
  "rattler_repodata_gateway/native-tls",
  "rattler_index/native-tls",
  "reqwest/native-tls",
]
rustls-tls = [
  "rattler_networking/rustls-tls",
  "rattler_repodata_gateway/rustls-tls",
  "rattler_index/rustls-tls",
  "reqwest/rustls-tls",
]

[dependencies]
# https://github.com/conda/rattler/issues/1726
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.5.51", features = ["derive", "string", "env"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
console = "0.16.1"
futures = "0.3.31"
indicatif = "0.18.3"
miette = { version = "7.6.0", features = ["fancy"] }
number_prefix = "0.4.0"
opendal = { version = "0.54.1", features = ["services-s3", "services-fs"] }
rattler_conda_types = "0.41.0"
rattler_digest = "1.2.0"
rattler_index = { version = "0.27.1", default-features = false }
rattler_networking = { version = "0.25.22", features = [
  "s3",
], default-features = false }
rattler_repodata_gateway = { version = "0.25.0", default-features = false }
reqwest = { version = "0.12.24", default-features = false }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde_yml = "0.0.12"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "default",
  "env-filter",
] }
url = "2.5.7"
