[package]
name = "conda-mirror"
description = "Mirror conda channels"
version = "0.12.1"
edition = "2024"

[features]
default = ["native-tls"]
native-tls = [
  "rattler_networking/native-tls",
  "rattler_repodata_gateway/native-tls",
  "rattler_index/native-tls",
  "reqwest/native-tls",
]
rustls-tls = [
  "rattler_networking/rustls-tls",
  "rattler_repodata_gateway/rustls-tls",
  "rattler_index/rustls-tls",
  "reqwest/rustls-tls",
]

[dependencies]
# https://github.com/conda/rattler/issues/1726
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive", "string", "env"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
console = "0.16.3"
futures = "0.3.32"
indicatif = "0.18.4"
miette = { version = "7.6.0", features = ["fancy"] }
number_prefix = "0.4.0"
opendal = { version = "0.55.0", features = ["services-s3", "services-fs"] }
rattler_conda_types = "0.42.2"
rattler_digest = "1.2.0"
rattler_index = { version = "0.27.1", default-features = false }
rattler_networking = { version = "0.25.22", features = [
  "s3",
], default-features = false }
rattler_repodata_gateway = { version = "0.25.0", default-features = false }
reqwest = { version = "0.12.28", default-features = false }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.0"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yml = "0.0.12"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
  "default",
  "env-filter",
] }
url = "2.5.8"
