[package]
name = "conda-mirror"
description = "Mirror conda channels"
version = "0.12.1"
edition = "2024"

[features]
default = ["native-tls"]
native-tls = [
  "rattler_networking/native-tls",
  "rattler_repodata_gateway/native-tls",
  "rattler_index/native-tls",
  "reqwest/native-tls",
]
rustls-tls = [
  "rattler_networking/rustls",
  "rattler_repodata_gateway/rustls",
  "rattler_index/rustls",
  "reqwest/rustls",
]

[dependencies]
# https://github.com/conda/rattler/issues/1726
anyhow = "1.0.100"
bytes = "1.11.1"
clap = { version = "4.5.51", features = ["derive", "string", "env"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
console = "0.16.1"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.3"
miette = { version = "7.6.0", features = ["fancy"] }
number_prefix = "0.4.0"
opendal = { version = "0.57.0", features = ["services-s3", "services-fs"] }
rattler_conda_types = "0.48.1"
rattler_digest = "1.3.2"
rattler_index = { version = "0.30.9", default-features = false }
rattler_networking = { version = "0.30.2", features = [
  "s3",
], default-features = false }
rattler_repodata_gateway = { version = "0.30.1", default-features = false }
reqwest = { version = "0.13.4", default-features = false }
reqwest-middleware = { package = "astral-reqwest-middleware", version = "0.5.1" }
reqwest-retry = { package = "astral-reqwest-retry", version = "0.9.1" }
serde = "1.0.228"
serde_json = "1.0.145"
serde_yml = "0.0.13"
sha2 = "0.11.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "default",
  "env-filter",
] }
url = "2.5.7"
